Initialize nesting branch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ set(source_files
   src/core/ke_mod.F90
   src/core/operators_mod.F90
   src/core/reduce_mod.F90
+  src/core/nest_mod.F90
   src/core/damp_mod.F90
   src/core/gmcore_mod.F90
   src/tests/swm/rossby_haurwitz_wave_test_mod.F90
