--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ set(source_files
   src/utils/history_mod.F90 
   src/utils/time_mod.F90
   src/utils/sphere_geometry_mod.F90
+  src/utils/block_mod.F90
   src/utils/allocator_mod.F90
   src/utils/parallel_mod.F90
   src/utils/debug_mod.F90
