Change fill_halo arg from mesh to block

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ set(source_files
   src/core/static_mod.F90
   src/core/tend_mod.F90
   src/core/pv_mod.F90
+  src/core/ke_mod.F90
   src/core/operators_mod.F90
   src/core/reduced_types_mod.F90
   src/core/reduce_mod.F90
