Add shallow water waves case

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ set(source_files
   src/tests/swm/jet_zonal_flow_test_mod.F90
   src/tests/swm/steady_geostrophic_flow_test_mod.F90
   src/tests/swm/cross_pole_flow_test_mod.F90
+  src/tests/swm/shallow_water_waves_test_mod.F90
   lib/quadpack.f90
 )
 
