Try to support different precision (not finished)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(gmcore LANGUAGES Fortran)
 
 option(V_POLE "Stagger V on the two Poles" OFF)
 option(SIGMA "Use sigma vertical coordinate" OFF)
+option(R4 "Use single precision" OFF)
+option(R16 "Use quadruple precision" OFF)
 
 if (V_POLE)
   add_definitions(-DV_POLE)
@@ -11,6 +13,13 @@ endif ()
 if (SIGMA)
   add_definitions(-DSIGMA)
   message(STATUS "Use sigma vertical coordinate.")
+endif ()
+if (R4)
+  add_definitions(-DREAL_KIND=4)
+  message(STATUS "Use single precision.")
+elseif (R16)
+  add_definitions(-DREAL_KIND=16)
+  message(STATUS "Use quadruple precision.")
 endif ()
 
 if (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
