--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,7 @@ set(source_files
   src/tests/steady_state_test_mod.F90
   src/tests/rossby_haurwitz_wave_3d_test_mod.F90
   src/tests/mountain_wave_test_mod.F90
+  src/tests/baroclinic_wave_test_mod.F90
   src/tests/held_suarez_test_mod.F90
   lib/quadpack.f90
 )
