Add pgf_mod and transfer sb81 pgf into new mod

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,10 @@ set(source_files
   src/utils/parallel_mod.F90
   src/utils/tridiag_mod.F90
   src/utils/debug_mod.F90
+  src/core/pgf/pgf_mod.F90
+  src/core/pgf/pgf_swm_mod.F90
+  src/core/pgf/pgf_sb81_mod.F90
+  src/core/pgf/pgf_lin97_mod.F90
   src/core/mesh_mod.F90
   src/core/sigma_coord_mod.F90
   src/core/hybrid_coord_test_mod.F90
