--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,7 @@ set(source_files
   src/core/damp/vor_damp_mod.F90
   src/core/damp/damp_mod.F90
   src/core/gmcore_mod.F90
+  src/physics/test_forcing_mod.F90
   src/tests/swm/rossby_haurwitz_wave_test_mod.F90
   src/tests/swm/mountain_zonal_flow_test_mod.F90
   src/tests/swm/jet_zonal_flow_test_mod.F90
