Start NH development

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,7 @@ set(gmcore_files
   src/core/tend_mod.F90
   src/core/pv_mod.F90
   src/core/ke_mod.F90
+  src/core/nh_mod.F90
   src/core/interp_mod.F90
   src/core/operators_mod.F90
   src/core/reduced_types_mod.F90
