--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,7 @@ set(gmcore_files
   src/tests/mountain_wave_test_mod.F90
   src/tests/baroclinic_wave_test_mod.F90
   src/tests/held_suarez_test_mod.F90
+  src/tests/steady_state_pgf_test_mod.F90
   lib/quadpack.f90
 )
 
