--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(gmcore LANGUAGES Fortran)
 option(V_POLE "Stagger V on the two Poles" OFF)
 option(R4 "Use single precision" OFF)
 option(R16 "Use quadruple precision" OFF)
+option(ENSURE_ORDER "Ensure computation order in parallel" OFF)
 
 if (V_POLE)
   add_definitions(-DV_POLE)
@@ -19,6 +20,11 @@ elseif (R16)
   add_definitions(-DREAL_KIND=16)
 	set(CPPFLAGS ${CPPFLAGS} -DREAL_KIND=16)
   message(STATUS "Use quadruple precision.")
+endif ()
+if (ENSURE_ORDER)
+  add_definitions(-DENSURE_ORDER)
+  set(CPPFLAGS ${CPPFLAGS} -DENSURE_ORDER)
+  message(STATUS "Ensure computation order in parallel.")
 endif ()
 
 if (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
