Start to test dcmip31 and add diag_state_mod

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,7 @@ set(gmcore_files
   src/utils/namelist_mod.F90
   src/utils/time_mod.F90
   src/utils/math_mod.F90
+  src/utils/diag_state_mod.F90
   src/utils/history_mod.F90
   src/utils/initial_mod.F90
   src/utils/restart_mod.F90
@@ -160,6 +161,7 @@ set(gmcore_files
   src/tests/held_suarez_test_mod.F90
   src/tests/steady_state_pgf_test_mod.F90
   src/tests/ksp15_test_mod.F90
+  src/tests/dcmip31_test_mod.F90
   lib/quadpack.f90
 )
 
