Change CMakeLists.txt to find eccodes in system path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,12 @@ if (DEFINED ENV{ECCODES_ROOT})
   link_directories("$ENV{ECCODES_ROOT}/lib64")
   list(APPEND EXTERNAL_LIBS eccodes_f90)
 else ()
-  message(WARNING "Unable to find EcCodes!")
+  find_package(ECCODES)
+  if (ECCODES_FOUND)
+    list(APPEND EXTERNAL_LIBS eccodes_f90)
+  else ()
+    message(WARNING "Unable to find EcCodes!")
+  endif ()
 endif ()
 
 if (DEFINED ENV{MKLROOT})
