Revise codes for memory leak

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ if (DEFINED ENV{ECCODES_ROOT})
   link_directories("$ENV{ECCODES_ROOT}/lib64")
   list(APPEND EXTERNAL_LIBS eccodes_f90)
 else ()
-  find_package(ECCODES)
+  find_package(ECCODES QUIET)
   if (ECCODES_FOUND)
     list(APPEND EXTERNAL_LIBS eccodes_f90)
   else ()
