--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,10 +153,10 @@ set(gmcore_files
   src/core/damp/laplace_damp_mod.F90
   src/core/damp/smag_damp_mod.F90
   src/core/damp/damp_mod.F90
-  src/core/transport/tracer_mod.F90
-  src/core/transport/transport_batch_mod.F90
-  src/core/transport/transport_mod.F90
-  src/core/transport/ffsl_mod.F90
+  src/core/adv/tracer_mod.F90
+  src/core/adv/adv_batch_mod.F90
+  src/core/adv/adv_mod.F90
+  src/core/adv/ffsl_mod.F90
   src/core/gmcore_mod.F90
   src/prepare/prepare_mod.F90
   src/prepare/topo_mod.F90
