Add back zonal_damp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,7 @@ set(gmcore_files
   src/core/damp/vor_damp_mod.F90
   src/core/damp/laplace_damp_mod.F90
   src/core/damp/smag_damp_mod.F90
+  src/core/damp/zonal_damp_mod.F90
   src/core/damp/damp_mod.F90
   src/core/adv/adv_batch_mod.F90
   src/core/adv/adv_mod.F90
